@@ -4,7 +4,7 @@ use strict;
 use warnings;
 use 5.014;
 
-our $VERSION = '1.95';
+our $VERSION = '1.96';
 
 use Carp qw(confess cluck);
 use DateTime;
@@ -988,7 +988,7 @@ Non-blocking variant (EXPERIMENTAL):
 
 =head1 VERSION
 
-version 1.95
+version 1.96
 
 =head1 DESCRIPTION
 
